--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,4 @@
+workspace = { members = ["lib"] }
 [package]
 name = "plotto"
 version = "0.1.0"
@@ -9,3 +10,4 @@ edition = "2021"
 crossterm = "0.27.0"
 openai_dive = "0.4.5"
 tokio = { version = "1.36.0", features = ["full"] }
+lib = { path = "/Users/phat/Desktop/Codespaces/temp/plotto/lib" }
