--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ crossterm = "0.27.0"
 openai_dive = "0.4.5"
 tokio = { version = "1.36.0", features = ["full"] }
 lib = { path = "/Users/phat/Desktop/Codespaces/temp/plotto/lib" }
+serde_json = "1.0.114"
+serde = "1.0.197"
+features = "0.10.0"
+derive = "1.0.0"
