--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ serde = "1.0.197"
 features = "0.10.0"
 derive = "1.0.0"
 async-trait = "0.1.77"
+reqwest = { version = "0.11.24", features = ["json"] }
